src/test/deca/syntax/invalid/synt/missingVBar.deca
/* marche avec n'importe quel caractère à la place de | */

{
    x | y;
}
// @expected_output deca:4:6: token recognition error
